--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@ and is wrapped around the whole page content, except for the footer in this exam
 
   <!-- Image header -->
   <header class="w3-display-container w3-wide" id="home">
-    <img class="w3-image" src="/w3images/jane.jpg" alt="Fashion Blog" width="1600" height="1060">
+    <img class="w3-image" src="https://github.com/pankaj-sain/pankaj-sain.github.io/blob/master/WhatsApp%20Image%202019-08-11%20at%2011.02.00%20PM.jpeg?raw=true" alt="Fashion Blog" width="1600" height="1060">
     <div class="w3-display-left w3-padding-large">
-      <h1 class="w3-text-white">Jane's</h1>
-      <h1 class="w3-jumbo w3-text-white w3-hide-small"><b>FASHION BLOG</b></h1>
+      <h1 class="w3-text-white">Sameer</h1>
+      <h1 class="w3-jumbo w3-text-white w3-hide-small"><b>Pankaj BLOG</b></h1>
       <h6><button class="w3-button w3-white w3-padding-large w3-large w3-opacity w3-hover-opacity-off" onclick="document.getElementById('subscribe').style.display='block'">SUBSCRIBE</button></h6>
     </div>
   </header>
